# pog

./: README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: analytics.rs  inference.rs  lib.rs  tests.rs  tracking.rs
docs/: architecture.md  database_schema.sql
frontend/: pubspec.yaml
frontend/android/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/okosaurona/: MainActivity.kt
frontend/assets/models/: bytetrack.onnx  qwen2.5_vl_quantized.onnx  sam2_mobile.onnx
frontend/lib/: main.dart
frontend/lib/services/: ffi_bridge.dart
frontend/lib/state/: app_state.dart
frontend/lib/ui/: map_ui.dart  settings_ui.dart  tactical_ui.dart
frontend/test/: app_state_test.dart
scripts/: build_android.sh  download_models.sh
